--- a/my-react-app/package.json
+++ b/my-react-app/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.3",
     "cors": "^2.8.5",
+    "nodemon": "^3.1.9",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
